[quic|vpws]wrap quic in fd, support quic in vpws
as well as:
add AbstractDelegateFD
IP now can hold hostname
and some other upgrading